--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     justify-content: space-around;
     align-items: center;
     background: rgb(165, 188, 200);
+    font-family: "Outfit", sans-serif;
 }
 
 .card-main{
@@ -40,7 +41,7 @@
 .container-text{
     display: flex;
     gap: 20px;
-    padding: 0 20px 0 20px;
+    padding: 0 11px 0 11px;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
@@ -56,7 +57,7 @@
 .bolde{
     font-weight: bold;
     display: flex;
-    font-size: 23px;
+    font-size: 22px;
     font-style: normal;
 }
 
@@ -64,4 +65,5 @@
     display: flex;
     font-size: 16px;
     font-style: normal;
+    color: gray;
 }
